New toaster notification and download contacts as csv file...

--- a/src/app/contact-details/contact-details.component.html
+++ b/src/app/contact-details/contact-details.component.html
@@ -1,21 +1,21 @@
 <div style="width: 400px;">
         <div class="form-group">
-            <label for="name">First Name</label>
+            <label for="firstName">First Name</label>
             <input type="text" class="form-control" id="firstName" required [(ngModel)]="contact.firstName" name="firstName" disabled>
         </div>
 
         <div class="form-group">
-            <label for="name">Last Name</label>
+            <label for="lastName">Last Name</label>
             <input type="text" class="form-control" id="lastName" required [(ngModel)]="contact.lastName" name="lastName" disabled>
         </div>
 
         <div class="form-group">
-            <label for="name">Number</label>
+            <label for="phoneNumber">Number</label>
             <input type="number" class="form-control" id="phoneNumber" required [(ngModel)]="contact.phoneNumber" name="phoneNumber" disabled>
         </div>
 
         <div class="form-group">
-            <label for="name">Email ID</label>
+            <label for="email">Email ID</label>
             <input type="text" class="form-control" id="email" required [(ngModel)]="contact.email" name="email" disabled>
         </div>
 
