--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -26,14 +26,25 @@
                     <button type="reset" (click)="resetFile()" class="btn btn-success" style="margin-left: 15px;">Reset</button>
                 </form>
             </div>
-            <div class="col-md-4" >
-                <form>
-                    <div class="form-group">
-                        <br>
-                        <button type="submit" (click)="deleteAll()" class="btn btn-danger" style="margin-top: 6px;">Delete All</button>
+            <div class="col-md-4" *ngIf="(contacts | async)?.length > 0">
+                <div class="row">
+                    <div class="col-md-6">
+                        <form>
+                            <div class="form-group">
+                                <br>
+                                <button type="submit" (click)="deleteAll()" class="btn btn-danger" style="margin-top: 6px;">Delete All</button>
+                            </div>
+                        </form>
                     </div>
-                    
-                </form>
+                    <div class="col-md-6">
+                        <form>
+                            <div class="form-group">
+                                <br>
+                                <button type="submit" (click)="downloadFile()" class="btn btn-info" style="margin-top: 6px;">Download</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -41,12 +52,13 @@
 
     </div><br>
     <div class="panel-body">
-        <span *ngIf="(contacts | async).length > 0">
-            {{(contacts | async).length}} Rows
+        <span *ngIf="(contacts | async)?.length > 0">
+            {{(contacts | async)?.length}} Rows
         </span><br>
-        <table *ngIf="(contacts | async).length > 0" class="table table-striped table-bordered">
+        <table *ngIf="(contacts | async)?.length > 0" class="table table-striped table-bordered">
             <thead>
                 <tr>
+                    <th>Serial Number</th>
                     <th>Firstname</th>
                     <th>Lastname</th>
                     <th>Email</th>
@@ -55,15 +67,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let contact of contacts | async">
+                <tr *ngFor="let contact of contacts | async; let i = index">
+                    <td>{{i +1}}</td>
                     <td>{{contact.firstName}}</td>
                     <td>{{contact.lastName}}</td>
                     <td>{{contact.email}}</td>
                     <td>{{contact.phoneNumber}}</td>
                     <td>
-                            <button (click)="deleteContact(contact.id)" class="btn btn-danger" style="margin-left: 10px">Delete</button>
-                            <button (click)="updareContact(contact)" class="btn btn-info" style="margin-left: 10px">Update</button>
-                            <button (click)="details(contact)" class="btn btn-info" style="margin-left: 10px">Details</button>
+                            <button (click)="deleteContact(contact.id)" class="btn btn-danger" style="margin-left: 5px">Delete</button>
+                            <button (click)="updareContact(contact)" class="btn btn-info" style="margin-left: 5px">Update</button>
+                            <button (click)="details(contact)" class="btn btn-info" style="margin-left: 5px">Details</button>
                     
                     </td>
                 </tr>
