--- a/src/app/update-contact/update-contact.component.html
+++ b/src/app/update-contact/update-contact.component.html
@@ -1,30 +1,26 @@
-<h3>Create Contact</h3>
-<div [hidden]="submitted" style="width: 400px;">
+<h3>Update Contact</h3>
+<div style="width: 400px;">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
-            <label for="name">First Name</label>
+            <label for="firstName">First Name</label>
             <input type="text" class="form-control" id="firstName" required [(ngModel)]="contact.firstName" name="firstName">
         </div>
 
         <div class="form-group">
-            <label for="name">Last Name</label>
+            <label for="lastName">Last Name</label>
             <input type="text" class="form-control" id="lastName" required [(ngModel)]="contact.lastName" name="lastName">
         </div>
 
         <div class="form-group">
-            <label for="name">Number</label>
-            <input type="number" class="form-control" id="phoneNumber" required [(ngModel)]="contact.phoneNumber" name="phoneNumber">
+            <label for="phoneNumber">Number</label>
+            <input type="text" class="form-control" id="phoneNumber" required [(ngModel)]="contact.phoneNumber" name="phoneNumber">
         </div>
 
         <div class="form-group">
-            <label for="name">Email ID</label>
+            <label for="email">Email ID</label>
             <input type="text" class="form-control" id="email" required [(ngModel)]="contact.email" name="email">
         </div>
 
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
-</div>
-
-<div [hidden]="!submitted">
-    <h4>You submitted successfully!</h4>
 </div>
