--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -6,7 +6,7 @@
             
         
 
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <form (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label for="name">Search Key</label>
@@ -16,7 +16,7 @@
                     <button type="reset" (click)="search='';onSubmit()" class="btn btn-success" style="margin-left: 15px;">Reset</button>
                 </form>
             </div>
-            <div class="col-md-4" >
+            <div class="col-md-6" >
                 <form (ngSubmit)="handleFileInput()">
                     <div class="form-group">
                         <label for="name">Browse a File</label>
@@ -26,39 +26,42 @@
                     <button type="reset" (click)="resetFile()" class="btn btn-success" style="margin-left: 15px;">Reset</button>
                 </form>
             </div>
-            <div class="col-md-4" *ngIf="(contacts | async)?.length > 0">
-                <div class="row">
-                    <div class="col-md-6">
-                        <form>
-                            <div class="form-group">
-                                <br>
-                                <button type="submit" (click)="deleteAll()" class="btn btn-danger" style="margin-top: 6px;">Delete All</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-md-6">
-                        <form>
-                            <div class="form-group">
-                                <br>
-                                <button type="submit" (click)="downloadFile()" class="btn btn-info" style="margin-top: 6px;">Download</button>
-                            </div>
-                        </form>
-                    </div>
+            
+        </div>
+
+        <div *ngIf="(contacts$)?.length > 0">
+            <div class="row">
+                <div class="col-md-2">
+                    <form>
+                        <div class="form-group">
+                            <br>
+                            <button type="submit" (click)="deleteAll()" class="btn btn-danger" style="margin-top: 6px;">Delete Selected</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2">
+                    <form>
+                        <div class="form-group">
+                            <br>
+                            <button type="submit" (click)="downloadFile()" class="btn btn-info" style="margin-top: 6px;">Download</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
 
-        
-
     </div><br>
     <div class="panel-body">
-        <span *ngIf="(contacts | async)?.length > 0">
-            {{(contacts | async)?.length}} Rows
+        <span *ngIf="(contacts$)?.length > 0">
+            {{(contacts$)?.length}} Rows
         </span><br>
-        <table *ngIf="(contacts | async)?.length > 0" class="table table-striped table-bordered">
+        <table *ngIf="(contacts$)?.length > 0" class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th>Serial Number</th>
+                    <th>
+                        <label for="checkbox">Select All</label><br>
+                        <input type="checkbox" name="checkbox" [(ngModel)]="isAllChecked" (change)="checkedAll()">
+                    </th>
                     <th>Firstname</th>
                     <th>Lastname</th>
                     <th>Email</th>
@@ -67,8 +70,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let contact of contacts | async; let i = index">
-                    <td>{{i +1}}</td>
+                <tr *ngFor="let contact of contacts$; let i = index">
+                    <td>
+                        <input type="checkbox"  [(ngModel)]="contacts$[i].isChecked" name="checkbox" (change)="addOrRemove(contact)">
+                    </td>
                     <td>{{contact.firstName}}</td>
                     <td>{{contact.lastName}}</td>
                     <td>{{contact.email}}</td>
@@ -82,5 +87,27 @@
                 </tr>
             </tbody>
         </table>
+
+        <div *ngIf="(contacts$)?.length > 0">
+            <div class="row">
+                <div class="col-md-2">
+                    <form>
+                        <div class="form-group">
+                            <br>
+                            <button type="submit" (click)="deleteAll()" class="btn btn-danger" style="margin-top: 6px;">Delete Selected</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2">
+                    <form>
+                        <div class="form-group">
+                            <br>
+                            <button type="submit" (click)="downloadFile()" class="btn btn-info" style="margin-top: 6px;">Download</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
