--- a/src/app/create-contact/create-contact.component.html
+++ b/src/app/create-contact/create-contact.component.html
@@ -12,8 +12,23 @@
         </div>
 
         <div class="form-group">
-            <label for="phoneNumber">Number</label>
-            <input type="text" class="form-control" id="phoneNumber" required [(ngModel)]="contact.phoneNumber" name="phoneNumber">
+            <label for="mobileNumber1">Mobile Number 1</label>
+            <input type="text" class="form-control" id="mobileNumber1" required [(ngModel)]="mobileNumber1" name="mobileNumber1">
+        </div>
+
+        <div class="form-group">
+            <label for="mobileNumber2">Mobile Number 2</label>
+            <input type="text" class="form-control" id="mobileNumber2" required [(ngModel)]="mobileNumber2" name="mobileNumber2">
+        </div>
+
+        <div class="form-group">
+            <label for="workNumber1">Work Number 1</label>
+            <input type="text" class="form-control" id="workNumber1" required [(ngModel)]="workNumber1" name="workNumber1">
+        </div>
+
+        <div class="form-group">
+            <label for="workNumber2">Work Number 2</label>
+            <input type="text" class="form-control" id="workNumber2" required [(ngModel)]="workNumber2" name="workNumber2">
         </div>
 
         <div class="form-group">
