--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -59,13 +59,11 @@
             <thead>
                 <tr>
                     <th>
-                        <label for="checkbox">Select All</label><br>
-                        <input type="checkbox" name="checkbox" [(ngModel)]="isAllChecked" (change)="checkedAll()">
+                        <input type="checkbox" name="checkbox" [(ngModel)]="isAllChecked" (change)="checkedAll()">  All
                     </th>
                     <th>Firstname</th>
                     <th>Lastname</th>
                     <th>Email</th>
-                    <th>Phone Number</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -77,15 +75,25 @@
                     <td>{{contact.firstName}}</td>
                     <td>{{contact.lastName}}</td>
                     <td>{{contact.email}}</td>
-                    <td>{{contact.phoneNumber}}</td>
                     <td>
-                        <button (click)="deleteContact(contact.id)" class="btn btn-danger btn-sm" style="margin-left: 5px"><i class="fas fa-trash"></i></button>
+                        <button (click)="deleteContact(contact.contactId)" class="btn btn-danger btn-sm" style="margin-left: 5px"><i class="fas fa-trash"></i></button>
                         <button (click)="updareContact(contact)" class="btn btn-info btn-sm" style="margin-left: 5px"><i class="fas fa-edit"></i></button>
                         <button (click)="details(contact)" class="btn btn-info btn-sm" style="margin-left: 5px"><i class="fas fa-bars"></i></button>
                     
                     </td>
                 </tr>
             </tbody>
+            <thead>
+                <tr>
+                    <th>
+                        <input type="checkbox" name="checkbox" [(ngModel)]="isAllChecked" (change)="checkedAll()"> All
+                    </th>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
         </table>
 
         <div *ngIf="(contacts$)?.length > 0">
